--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       name="viewport"
     />
     <link href="/favicon.ico" rel="icon" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
   <body>
     <div id="root"></div>
