added status bar setting

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Plant Tracker</title>
     <meta key="title" content="Plant Tracker" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Keep track of your plants to simplify your plant care."
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta
+      content="Keep track of your plants to simplify your plant care."
       name="description"
     />
     <meta
