--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
+    <meta name="theme-color" content="???" />
     <link href="/favicon.ico" rel="icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
